--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -82,7 +82,7 @@ $black: #2b2523
   padding: 0 1rem
 footer.footer
   padding: 3rem 0rem 0rem
-  background-color: transparent
+  // background-color: transparent
 
 //Menu overrides
 $menu-item-color: $white-ter
