--- a/src/components/footer.styles.scss
+++ b/src/components/footer.styles.scss
@@ -39,12 +39,72 @@
     &__brand {
         padding: 1em 0;
         text-transform: uppercase;
-        font-size: 2.5em;
+        font-size: 2em;
 
         @media (max-width: 767px) {
             font-size: 1.5em;
         }
     }
+                    a{
+                        color: #fff;
+                        font-size: 16px;
+                        font-weight: 700;
+                    
+                        text-decoration: none;
+                        text-transform: uppercase;
+                    }
+                    
+                    /*
+                    * These styles creates the underlining of link
+                    */
+                    
+                    a{
+                        position: relative;
+                        z-index: 1;
+                        display: inline-flex;
+                        margin-top: 5px;
+                        padding-left: 10px;
+                        padding-bottom: 5px;
+                        padding-right: 10px;
+
+                        &:hover {
+                            text-decoration: none;
+                            color: #fff;
+                        }
+                    }
+                    
+                    a::before{
+                        content: "";
+                        width: 100%;
+                        height: 50%;
+                        background-image: linear-gradient(to top, #fed330 25%, rgba(0, 0, 0, 0) 40%);
+                        
+                        position: absolute;
+                        left: 0;
+                        bottom: 2px;
+                        z-index: -1;
+                        
+                        will-change: width;
+                        transform: rotate(-2deg);
+                        transform-origin: left bottom
+                    }
+                    
+                    a:hover::before{
+                        width: 0;
+                    }
+                    
+                    /*
+                    * animation styles
+                    */
+                    
+                    a::before{
+                        transition: width .1s ease-out;
+                    }
+                    
+                    a:hover::before{
+                        transition-duration: .15s;
+                    }
+                    
 
     &__text {
         font-size: 20px;
