--- a/src/pages/team/team.styles.scss
+++ b/src/pages/team/team.styles.scss
@@ -31,7 +31,7 @@
                 box-shadow: 0px 0px 3px 0px grey;
                 border-radius: 50%;
                 width: 100%;
-                height: auto;
+                height: 100%;
             }
         }
 
