--- a/src/components/footer.styles.scss
+++ b/src/components/footer.styles.scss
@@ -45,6 +45,7 @@
             font-size: 1.5em;
         }
     }
+                   &__row {
                     a{
                         color: #fff;
                         font-size: 16px;
@@ -104,6 +105,7 @@
                     a:hover::before{
                         transition-duration: .15s;
                     }
+                   }
                     
 
     &__text {
